# coding-challenge-app

./: .gitignore
backend/: database.db  pyproject.toml  requirements.txt
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: package-lock.json  package.json
frontend/src/auth/: ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
